chore: Fixed overflow issue in team members slider

--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -60,6 +60,7 @@
 }
 .teamMembersSlider {
     .swiper {
+        overflow: visible;
         padding: f.pxToRem(30px) 0;
         .swiper-slide{
             width: fit-content;
